--- a/.clinerules/.clinerules.md
+++ b/.clinerules/.clinerules.md
@@ -1,4 +1,5 @@
 ## Always review and ensure the following:
+
 1. Single Responsibility Principle (SRP)
 2. Open/Closed Principle (OCP)
 3. Liskov Substitution Principle (LSP)
@@ -10,4 +11,6 @@
 9. Separation of Concerns (SoC) & Modularity
 
 ## Rules to follow
+
 - When approaching a defect or bug fix ALWAYS write a test first to validate the bug. That way, upon implementing the solution the test can be run to ensure the bug was eliminated.
+- We should NEVER keep legacy or duplicate code. A refactor or update means refactoring to a clean state and not leaving behind bloat and obselete code.
