--- a/.clinerules/.clinerules.md
+++ b/.clinerules/.clinerules.md
@@ -14,3 +14,14 @@
 
 - When approaching a defect or bug fix ALWAYS write a test first to validate the bug. That way, upon implementing the solution the test can be run to ensure the bug was eliminated.
 - We should NEVER keep legacy or duplicate code. A refactor or update means refactoring to a clean state and not leaving behind bloat and obselete code.
+- No underscores
+- No regions
+
+## Testing
+- xUnit and Moq along with FluentAssertions
+- Arrange Act Assert format
+- Should_When_Returns format 
+eg: Should_Set_Sliding_Issued_At_Time_When_Valid_Credentials_Expired_Or_Invalid_Returns_Logout
+eg: Should_Check_Subscription_When_Customer_Claim_Found_Returns_Next_Or_Redirect
+- [Fact] alone is considerable on small classes. MemberData and InlineData are highly encouraged. Writing negative test-cases is encouraged (ones that result in exceptions, etc.) 
+- Tests should only Assert a singular time
