syntax clean-up

--- a/.clinerules/.clinerules.md
+++ b/.clinerules/.clinerules.md
@@ -18,6 +18,7 @@
 - No regions
 
 ## Testing
+
 - xUnit and Moq along with FluentAssertions
 - Arrange Act Assert format
 - Should_When_Returns format 
@@ -25,3 +26,6 @@ eg: Should_Set_Sliding_Issued_At_Time_When_Valid_Credentials_Expired_Or_Invalid_
 eg: Should_Check_Subscription_When_Customer_Claim_Found_Returns_Next_Or_Redirect
 - [Fact] alone is considerable on small classes. MemberData and InlineData are highly encouraged. Writing negative test-cases is encouraged (ones that result in exceptions, etc.) 
 - Tests should only Assert a singular time
+
+## Platform / Project specific
+- MessageBus should be instance based and not static for decoupling and testability
