--- a/.clinerules/.clinerules.md
+++ b/.clinerules/.clinerules.md
@@ -21,11 +21,13 @@
 
 - xUnit and Moq along with FluentAssertions
 - Arrange Act Assert format
-- Should_When_Returns format 
+- If no // Arrange is required the next line should be // Act
+- DO NOT use 'sut' or arbitrary names. Use ONLY the class name with exception of mocks such as 'mockClassName'
+- Should_When_Returns format for test names
 eg: Should_Set_Sliding_Issued_At_Time_When_Valid_Credentials_Expired_Or_Invalid_Returns_Logout
 eg: Should_Check_Subscription_When_Customer_Claim_Found_Returns_Next_Or_Redirect
-- [Fact] alone is considerable on small classes. MemberData and InlineData are highly encouraged. Writing negative test-cases is encouraged (ones that result in exceptions, etc.) 
-- Tests should only Assert a singular time
+- [Fact] alone is considerable on small classes. TheoryData, MemberData and InlineData are highly encouraged. Writing negative test-cases is encouraged (ones that result in exceptions, etc.) 
+- Tests should only Assert a singular item on one line.
 
 ## Platform / Project specific
 - MessageBus should be instance based and not static for decoupling and testability
