add image feature

--- a/.clinerules/.clinerules.md
+++ b/.clinerules/.clinerules.md
@@ -16,6 +16,7 @@
 - We should NEVER keep legacy or duplicate code. A refactor or update means refactoring to a clean state and not leaving behind bloat and obselete code.
 - No underscores
 - No regions
+- DO NOT use abbreviations for anything. Variable names or otherwise
 
 ## Testing
 
