--- a/Resources/Strings/AppResources.resx
+++ b/Resources/Strings/AppResources.resx
@@ -1,148 +1,254 @@
 <?xml version="1.0" encoding="utf-8"?>
 <root>
-  <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
-    <xsd:import namespace="http://www.w3.org/XML/1998/namespace" />
-    <xsd:element name="root" msdata:IsDataSet="true">
-      <xsd:complexType>
-        <xsd:choice maxOccurs="unbounded">
-          <xsd:element name="metadata">
+    <!--
+    Microsoft ResX Schema
+
+    Version 2.0
+
+    The primary goals of this format is to allow a simple XML format
+    that is mostly human readable. The generation and parsing of the
+    various data types are done through the TypeConverter classes
+    associated with the data types.
+
+    Example:
+
+    ... ado.net/XML headers & schema ...
+    <resheader name="resmimetype">text/microsoft-resx</resheader>
+    <resheader name="version">2.0</resheader>
+    <resheader name="reader">System.Resources.ResXResourceReader, System.Windows.Forms, ...</resheader>
+    <resheader name="writer">System.Resources.ResXResourceWriter, System.Windows.Forms, ...</resheader>
+    <data name="Name1"><value>this is my long string</value><comment>this is a comment</comment></data>
+    <data name="Color1" type="System.Drawing.Color, System.Drawing">Blue</data>
+    <data name="Bitmap1" mimetype="application/x-microsoft.net.object.binary.base64">
+        <value>[base64 mime encoded serialized .NET Framework object]</value>
+    </data>
+    <data name="Icon1" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+        <value>[base64 mime encoded string representing a byte array form of the .NET Framework object]</value>
+        <comment>This is a comment</comment>
+    </data>
+
+    There are any number of "resheader" rows that contain simple
+    name/value pairs.
+
+    Each data row contains a name, and value. The row also contains a
+    type or mimetype. Type corresponds to a .NET class that support
+    text/value conversion through the TypeConverter architecture.
+    Classes that don't support this are serialized and stored with the
+    mimetype set.
+
+    The mimetype is used for serialized objects, and tells the
+    ResXResourceReader how to depersist the object. This is currently not
+    extensible. For a given mimetype the value must be set accordingly:
+
+    Note - application/x-microsoft.net.object.binary.base64 is the format
+    that the ResXResourceWriter will generate, however the reader can
+    read any of the formats listed below.
+
+    mimetype: application/x-microsoft.net.object.binary.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Binary.BinaryFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.soap.base64
+    value   : The object must be serialized with
+            : System.Runtime.Serialization.Formatters.Soap.SoapFormatter
+            : and then encoded with base64 encoding.
+
+    mimetype: application/x-microsoft.net.object.bytearray.base64
+    value   : The object must be serialized into a byte array
+            : using a System.ComponentModel.TypeConverter
+            : and then encoded with base64 encoding.
+    -->
+    <xsd:schema id="root" xmlns="" xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:msdata="urn:schemas-microsoft-com:xml-msdata">
+        <xsd:import namespace="http://www.w3.org/XML/1998/namespace"/>
+        <xsd:element name="root" msdata:IsDataSet="true">
             <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" />
-              </xsd:sequence>
-              <xsd:attribute name="name" use="required" type="xsd:string" />
-              <xsd:attribute name="type" type="xsd:string" />
-              <xsd:attribute name="mimetype" type="xsd:string" />
-              <xsd:attribute ref="xml:space" />
+                <xsd:choice maxOccurs="unbounded">
+                    <xsd:element name="metadata">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0"/>
+                            </xsd:sequence>
+                            <xsd:attribute name="name" use="required" type="xsd:string"/>
+                            <xsd:attribute name="type" type="xsd:string"/>
+                            <xsd:attribute name="mimetype" type="xsd:string"/>
+                            <xsd:attribute ref="xml:space"/>
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="assembly">
+                        <xsd:complexType>
+                            <xsd:attribute name="alias" type="xsd:string"/>
+                            <xsd:attribute name="name" type="xsd:string"/>
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="data">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2"/>
+                            </xsd:sequence>
+                            <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1"/>
+                            <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3"/>
+                            <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4"/>
+                            <xsd:attribute ref="xml:space"/>
+                        </xsd:complexType>
+                    </xsd:element>
+                    <xsd:element name="resheader">
+                        <xsd:complexType>
+                            <xsd:sequence>
+                                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1"/>
+                            </xsd:sequence>
+                            <xsd:attribute name="name" type="xsd:string" use="required"/>
+                        </xsd:complexType>
+                    </xsd:element>
+                </xsd:choice>
             </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="assembly">
-            <xsd:complexType>
-              <xsd:attribute name="alias" type="xsd:string" />
-              <xsd:attribute name="name" type="xsd:string" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="data">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-                <xsd:element name="comment" type="xsd:string" minOccurs="0" msdata:Ordinal="2" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" msdata:Ordinal="1" />
-              <xsd:attribute name="type" type="xsd:string" msdata:Ordinal="3" />
-              <xsd:attribute name="mimetype" type="xsd:string" msdata:Ordinal="4" />
-              <xsd:attribute ref="xml:space" />
-            </xsd:complexType>
-          </xsd:element>
-          <xsd:element name="resheader">
-            <xsd:complexType>
-              <xsd:sequence>
-                <xsd:element name="value" type="xsd:string" minOccurs="0" msdata:Ordinal="1" />
-              </xsd:sequence>
-              <xsd:attribute name="name" type="xsd:string" use="required" />
-            </xsd:complexType>
-          </xsd:element>
-        </xsd:choice>
-      </xsd:complexType>
-    </xsd:element>
-  </xsd:schema>
-  <resheader name="resmimetype">
-    <value>text/microsoft-resx</value>
-  </resheader>
-  <resheader name="version">
-    <value>2.0</value>
-  </resheader>
-  <resheader name="reader">
-    <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <resheader name="writer">
-    <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </resheader>
-  <data name="Layers_Title" xml:space="preserve">
-    <value>Layers</value>
-  </data>
-  <data name="ToolTip_AddLayer" xml:space="preserve">
-    <value>Add Layer</value>
-  </data>
-  <data name="ToolTip_RemoveLayer" xml:space="preserve">
-    <value>Remove Layer</value>
-  </data>
-  <data name="ToolTip_ToggleTraceMode" xml:space="preserve">
-    <value>Toggle Transparency Mode</value>
-  </data>
-  <data name="ToolTip_CollapseLayers" xml:space="preserve">
-    <value>Collapse Layers Panel</value>
-  </data>
-  <data name="ToolTip_LayerVisibility" xml:space="preserve">
-    <value>Toggle Visibility</value>
-  </data>
-  <data name="ToolTip_LayerLock" xml:space="preserve">
-    <value>Toggle Lock</value>
-  </data>
-  <data name="Label_Styles" xml:space="preserve">
-    <value>Styles</value>
-  </data>
-  <data name="Label_Shapes" xml:space="preserve">
-    <value>Shapes</value>
-  </data>
-  <data name="Label_Image" xml:space="preserve">
-    <value>Image</value>
-  </data>
-  <data name="Label_Save" xml:space="preserve">
-    <value>Save</value>
-  </data>
-  <data name="Label_Delete" xml:space="preserve">
-    <value>Delete</value>
-  </data>
-  <data name="Label_Undo" xml:space="preserve">
-    <value>Undo</value>
-  </data>
-  <data name="Label_Redo" xml:space="preserve">
-    <value>Redo</value>
-  </data>
-  <data name="ToolTip_SelectTool" xml:space="preserve">
-    <value>Select Tool</value>
-  </data>
-  <data name="ToolTip_Styles" xml:space="preserve">
-    <value>Style Settings</value>
-  </data>
-  <data name="ToolTip_BrushSettings" xml:space="preserve">
-    <value>Brush Settings</value>
-  </data>
-  <data name="ToolTip_Shapes" xml:space="preserve">
-    <value>Shapes</value>
-  </data>
-  <data name="ToolTip_ImportImage" xml:space="preserve">
-    <value>Import Image</value>
-  </data>
-  <data name="ToolTip_SaveImage" xml:space="preserve">
-    <value>Save Image</value>
-  </data>
-  <data name="ToolTip_Eraser" xml:space="preserve">
-    <value>Eraser</value>
-  </data>
-  <data name="ToolTip_DeleteSelected" xml:space="preserve">
-    <value>Delete Selected</value>
-  </data>
-  <data name="ToolTip_Undo" xml:space="preserve">
-    <value>Undo</value>
-  </data>
-  <data name="ToolTip_Redo" xml:space="preserve">
-    <value>Redo</value>
-  </data>
-  <data name="Label_ViewOptions" xml:space="preserve">
-    <value>View Options</value>
-  </data>
-  <data name="Label_ShowLayersPanel" xml:space="preserve">
-    <value>Show Layers Panel</value>
-  </data>
-  <data name="Label_ShowButtonLabels" xml:space="preserve">
-    <value>Show Button Labels</value>
-  </data>
-  <data name="ToolTip_ViewOptions" xml:space="preserve">
-    <value>View Options</value>
-  </data>
-  <data name="Label_Close" xml:space="preserve">
-    <value>Close</value>
-  </data>
+        </xsd:element>
+    </xsd:schema>
+    <resheader name="resmimetype">
+        <value>text/microsoft-resx</value>
+    </resheader>
+    <resheader name="version">
+        <value>2.0</value>
+    </resheader>
+    <resheader name="reader">
+        <value>System.Resources.ResXResourceReader, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    </resheader>
+    <resheader name="writer">
+        <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    </resheader>
+    <data name="Label_Close" xml:space="preserve">
+        <value>Close</value>
+        <comment/>
+    </data>
+    <data name="Label_Delete" xml:space="preserve">
+        <value>Delete</value>
+        <comment/>
+    </data>
+    <data name="Label_Eraser" xml:space="preserve">
+        <value>Eraser</value>
+    </data>
+    <data name="Label_Gallery" xml:space="preserve">
+        <value>Gallery</value>
+        <comment/>
+    </data>
+    <data name="Label_Image" xml:space="preserve">
+        <value>Image</value>
+        <comment/>
+    </data>
+    <data name="Label_Movie" xml:space="preserve">
+        <value>Movie</value>
+    </data>
+    <data name="Label_Redo" xml:space="preserve">
+        <value>Redo</value>
+        <comment/>
+    </data>
+    <data name="Label_Save" xml:space="preserve">
+        <value>Save</value>
+        <comment/>
+    </data>
+    <data name="Label_Select" xml:space="preserve">
+        <value>Select</value>
+    </data>
+    <data name="Label_Shapes" xml:space="preserve">
+        <value>Shapes</value>
+        <comment/>
+    </data>
+    <data name="Label_ShowButtonLabels" xml:space="preserve">
+        <value>Show Button Labels</value>
+        <comment/>
+    </data>
+    <data name="Label_ShowLayersPanel" xml:space="preserve">
+        <value>Show Layers Panel</value>
+        <comment/>
+    </data>
+    <data name="Label_Styles" xml:space="preserve">
+        <value>Styles</value>
+        <comment/>
+    </data>
+    <data name="Label_Undo" xml:space="preserve">
+        <value>Undo</value>
+        <comment/>
+    </data>
+    <data name="Label_ViewOptions" xml:space="preserve">
+        <value>View Options</value>
+        <comment/>
+    </data>
+    <data name="Layers_Title" xml:space="preserve">
+        <value>Layers</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_AddLayer" xml:space="preserve">
+        <value>Add Layer</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_BrushSettings" xml:space="preserve">
+        <value>Brush Settings</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_CollapseLayers" xml:space="preserve">
+        <value>Collapse Layers Panel</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_DeleteSelected" xml:space="preserve">
+        <value>Delete Selected</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_Eraser" xml:space="preserve">
+        <value>Eraser</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_Gallery" xml:space="preserve">
+        <value>Drawing Gallery</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_ImportImage" xml:space="preserve">
+        <value>Import Image</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_LayerLock" xml:space="preserve">
+        <value>Toggle Lock</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_LayerVisibility" xml:space="preserve">
+        <value>Toggle Visibility</value>
+    </data>
+    <data name="ToolTip_MovieMode" xml:space="preserve">
+        <value>Movie Mode</value>
+    </data>
+    <data name="ToolTip_Redo" xml:space="preserve">
+        <value>Redo</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_RemoveLayer" xml:space="preserve">
+        <value>Remove Layer</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_SaveImage" xml:space="preserve">
+        <value>Save Image</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_Select" xml:space="preserve">
+        <value>Select Tool</value>
+    </data>
+    <data name="ToolTip_Shapes" xml:space="preserve">
+        <value>Shapes</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_Styles" xml:space="preserve">
+        <value>Style Settings</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_ToggleTraceMode" xml:space="preserve">
+        <value>Toggle Transparency Mode</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_Undo" xml:space="preserve">
+        <value>Undo</value>
+        <comment/>
+    </data>
+    <data name="ToolTip_ViewOptions" xml:space="preserve">
+        <value>View Options</value>
+        <comment/>
+    </data>
 </root>
